# calends

./: .gitignore  LICENSE  MANIFEST.in  README.md  calends.py  pyproject.toml  requirements.dev.txt  setup.py
calends/: cache.py  calendar_manager.py  cli.py  colors.py  config.py  constants.py  event_collection.py  fetcher.py  interactive.py  parser.py  view.py
calends.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cache.py  test_calendar_manager.py  test_config.py  test_event_collection.py  test_fetcher.py  test_interactive.py  test_parser.py  test_view.py
