[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calends"
version = "0.1.0"
description = "A minimalist terminal calendar that displays your iCal events in a clean weekly view"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cugniere"}
]
keywords = ["calendar", "ical", "terminal", "cli", "ics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/cugniere/calends"
Repository = "https://github.com/cugniere/calends"
Issues = "https://github.com/cugniere/calends/issues"

[project.scripts]
calends = "calends.cli:main"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["calends*"]
exclude = ["tests*", "*.tests", "*.tests.*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
